<resources>
    <string name="app_name">Collect Proverb</string>
    <string name="header">今日の格言</string>
    <string name="no_proverb_yet">まだ格言を取得していません</string>
    <string name="cloud_description">背景の雲</string>
    <string name="get_proverb_button">今日の格言を受け取る</string>
    <string name="proverb_list">格言一覧</string>
    <string name="list_description">格言一覧の背景</string>
    <string name="unopened_badge_description">未開放のバッジ</string>
    <string name="popup_close_button">×</string>
    <string name="popup_close_text">閉じる</string>
    <string name="popup_next_text">次へ</string>
    <string name="popup_test_text">テストテキスト</string>
    <string name="buttonYes">Yes</string>
    <string name="buttonNo">No</string>
    <string name="popupImage">ポップアップイメージ</string>
    <string name="popup_proverb_author">発言者: </string>
    <string name="popup_proverb">格言</string>
    <string name="popup_proverb_get_day">取得日: </string>
    <string name="popup_proverb_count">取得回数: </string>
</resources>