<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/whiteBrown">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/popup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_test_text"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_close_text"
                android:backgroundTint="@color/lightOrange"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_gravity="end"/>

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_next_text"
                android:backgroundTint="@color/lightOrange"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_gravity="end"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>