<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/whiteBrown">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/close_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/popup_close_button"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_gravity="end"/>

        <ImageView
            android:id="@+id/popup_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/popupImage"
            android:src="@drawable/unopened_badge"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp">


            <TextView
                android:id="@+id/popup_proverb_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/popup_proverb_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/popup_proverb_get_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/popup_proverb_get_day" />

            <TextView
                android:id="@+id/popup_get_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/popup_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_proverb_count"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/popup_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>